# jota-speaker

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_client.py
.github/workflows/: test.yml
docs/superpowers/plans/: 2026-06-28-fase-1-robustez-y-cancelacion.md  2026-06-29-fase-2-normalizacion-espanol.md  2026-06-29-fase-4-barge-in.md
docs/superpowers/specs/: 2026-05-20-jota-speaker-wyoming-design.md  2026-06-29-fase-2-normalizacion-espanol.md  2026-06-29-fase-4-barge-in.md
scripts/: ws_smoke_test.py
src/: main.py
src/auth/: __init__.py  interface.py  jota_db.py  stub.py
src/core/: config.py  engine_factory.py  normalizer_factory.py
src/server/: accumulator.py  protocol.py  session.py  ws_handler.py
src/tts/: interface.py  mock_engine.py  normalizer.py
src/tts/kokoro/: engine.py
src/wyoming/: handler.py  protocol.py  server.py
tests/integration/: test_auth.py  test_chunk_aborted.py  test_engine_failure.py  test_engine_inference_timeout.py  test_kokoro_engine.py  test_normalizer_in_session.py  test_queue_full_recovery.py  test_session_teardown.py  test_tts_stream.py  test_wyoming_server.py
tests/unit/: test_accumulator.py  test_engine_interface.py  test_normalizer.py  test_normalizer_factory.py  test_protocol.py  test_wyoming_handler.py  test_wyoming_protocol.py
